--- a/web-backend/package.json
+++ b/web-backend/package.json
@@ -11,13 +11,15 @@
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "fluent-ffmpeg": "^2.1.2"
+    "fluent-ffmpeg": "^2.1.2",
+    "multer": "^2.0.0-rc.4"
   },
   "devDependencies": {
     "typescript": "^5.0.2",
     "@types/express": "^4.17.17",
     "@types/cors": "^2.8.13",
     "@types/fluent-ffmpeg": "^2.1.21",
+    "@types/multer": "^1.4.7",
     "@types/node": "^20.3.1",
     "ts-node-dev": "^2.0.0"
   }
