--- a/web-backend/package.json
+++ b/web-backend/package.json
@@ -6,21 +6,33 @@
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "start": "node dist/server.js",
-    "build": "tsc"
+    "build": "tsc",
+    "deps:check": "node scripts/update-deps.js check",
+    "deps:update": "node scripts/update-deps.js update",
+    "deps:update:dry": "node scripts/update-deps.js update --dry-run",
+    "deps:report": "node scripts/update-deps.js report",
+    "security:audit": "npm audit --audit-level moderate",
+    "security:fix": "npm audit fix"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "express": "^4.19.2",
     "cors": "^2.8.5",
-    "fluent-ffmpeg": "^2.1.2",
-    "multer": "^2.0.0-rc.4"
+    "fluent-ffmpeg": "^2.1.3",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
-    "typescript": "^5.0.2",
-    "@types/express": "^4.17.17",
-    "@types/cors": "^2.8.13",
-    "@types/fluent-ffmpeg": "^2.1.21",
-    "@types/multer": "^1.4.7",
-    "@types/node": "^20.3.1",
-    "ts-node-dev": "^2.0.0"
+    "typescript": "^5.6.3",
+    "@types/express": "^4.17.21",
+    "@types/cors": "^2.8.17",
+    "@types/fluent-ffmpeg": "^2.1.26",
+    "@types/multer": "^1.4.12",
+    "@types/node": "^22.9.3",
+    "ts-node-dev": "^2.0.0",
+    "rimraf": "^6.0.1"
+  },
+  "overrides": {
+    "glob": "^11.0.0",
+    "inflight": "^1.0.6",
+    "rimraf": "^6.0.1"
   }
 }
