--- a/web-backend/package.json
+++ b/web-backend/package.json
@@ -18,7 +18,7 @@
     "express": "^4.19.2",
     "cors": "^2.8.5",
     "fluent-ffmpeg": "^2.1.3",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^2.0.0"
   },
   "devDependencies": {
     "typescript": "^5.6.3",
